# fairplay

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
data/bbox_test/test_bboxes/: 000000.csv  000001.csv  000002.csv  000003.csv  000004.csv  000005.csv  000006.csv  000007.csv  000008.csv  000009.csv
data/bbox_test/train_bboxes/: 000000.csv  000001.csv  000002.csv  000003.csv  000004.csv  000005.csv  000006.csv  000007.csv  000008.csv  000009.csv  000010.csv  000011.csv  000012.csv  000013.csv  000014.csv  000015.csv  000016.csv  000017.csv  000018.csv  000019.csv  000020.csv  000021.csv  000022.csv  000023.csv  000024.csv  000025.csv  000026.csv  000027.csv  000028.csv  000029.csv
data/demo/: class_dict.csv
data/plot_params/: continuous.csv  data_gen.csv  discrete.csv  errorbar_styles.csv  fig_properties.csv  font_properties.csv  legend.csv  marker_styles.csv  plt_boolean.csv  tick_params.csv  tick_params_major.csv  tick_params_minor.csv
data/test-axis-labels/: class_dict.csv
notebooks/: 2021-09-08-py39-refresh.ipynb  2023-03-streamlit-tests.ipynb  2023-12-17-fairplay-refactor.ipynb  2023-12-20-axis-labels.ipynb  Graphs Segmentation UNet.ipynb
src/app/: app.py
src/fairplay/cv/: extractor.py  lines.py  ocr.py  train_unet.py  train_yolo.py
src/fairplay/img/: img_proc.py  standardize_dataset_res.py
src/fairplay/legacy/: find_axes.py  generate_random_scatter_old.py  ocr_tools.py
