[metadata]
name = fairplay
version = 0.0.1
author = Nils Persson
author_email = imperssonator@gmail.com
description = A library to extract data from plots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/imperssonator/fairplay
project_urls =
    Bug Tracker = https://github.com/imperssonator/fairplay/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    pandas>=1.3.2
    scipy>=1.7.1
    opencv-python>=4.5.3
    pillow>=8.3.2
    numpy>=1.19.5
    matplotlib>=3.4.3
    click
    tqdm

# [options.entry_points]
# console_scripts = 
#     generate-dataset = fairplay.gen.generate_random_scatter:main

[options.packages.find]
where = src